unpackaged/main/default/objects/College_Application__c/fields/Parents_State_of_Legal_Residence__c.field-meta.xml
<CustomField>
    <fullName>Parents_State_of_Legal_Residence__c</fullName>
    <label>Parents State of Legal Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Province_Region</valueSetName>
    </valueSet>
</CustomField>