unpackaged/main/default/objects/College_Application__c/fields/Permanent_Home__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Home__c</fullName>
    <label>Permanent Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent 1</fullName>
            </value>
            <value>
                <fullName>Parent 2</fullName>
            </value>
            <value>
                <fullName>Both Parents</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ward of the Court/State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>