unpackaged/main/default/objects/College_Application__c/fields/Please_provide_the_course_s_and_grade_s__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_the_course_s_and_grade_s__c</fullName>
    <label>Please provide the course(s) and grade(s</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>