unpackaged/main/default/objects/College_Application__c/fields/Proficient_Spoken_Languages__c.field-meta.xml
<CustomField>
    <fullName>Proficient_Spoken_Languages__c</fullName>
    <label>Proficient Spoken Languages</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>