unpackaged/main/default/objects/College_Application__c/fields/SAT_Math_Score__c.field-meta.xml
<CustomField>
    <fullName>SAT_Math_Score__c</fullName>
    <label>SAT - Math Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>