unpackaged/main/default/objects/College_Application__c/fields/SAT_Reading_Writing__c.field-meta.xml
<CustomField>
    <fullName>SAT_Reading_Writing__c</fullName>
    <label>SAT - Reading/Writing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>