unpackaged/main/default/objects/College_Application__c/fields/SAT_Score__c.field-meta.xml
<CustomField>
    <fullName>SAT_Score__c</fullName>
    <label>SAT Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>