unpackaged/main/default/objects/College_Application__c/fields/School_Application__c.field-meta.xml
<CustomField>
    <fullName>School_Application__c</fullName>
    <label>School Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Upload_Options</valueSetName>
    </valueSet>
</CustomField>