unpackaged/main/default/objects/College_Application__c/fields/Semester_Applying_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Semester_Applying_to_Partner__c</fullName>
    <label>Semester Applying to Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall 2020</fullName>
            </value>
            <value>
                <fullName>Spring 2021</fullName>
            </value>
            <value>
                <fullName>Fall 2021</fullName>
            </value>
            <value>
                <fullName>Spring 2022</fullName>
            </value>
            <value>
                <fullName>Fall 2022</fullName>
            </value>
            <value>
                <fullName>Spring 2023</fullName>
            </value>
            <value>
                <fullName>Fall 2023</fullName>
            </value>
            <value>
                <fullName>Winter 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>