unpackaged/main/default/objects/College_Application__c/fields/Semester_Date_Applying_to_Partner_Univer__c.field-meta.xml
<CustomField>
    <fullName>Semester_Date_Applying_to_Partner_Univer__c</fullName>
    <label>Semester Date Applying to Partner Univer</label>
    <type>Date</type>
</CustomField>