unpackaged/main/default/objects/College_Application__c/fields/Share_With_Collaborators__c.field-meta.xml
<CustomField>
    <fullName>Share_With_Collaborators__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share With Collaborators</label>
    <type>Checkbox</type>
</CustomField>