unpackaged/main/default/objects/College_Application__c/fields/Special_Circumstances_that_impact_high_s__c.field-meta.xml
<CustomField>
    <fullName>Special_Circumstances_that_impact_high_s__c</fullName>
    <label>Special Circumstances that impact high s</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>