unpackaged/main/default/objects/College_Application__c/fields/Statement_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Interest__c</fullName>
    <label>Statement of Interest</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>