unpackaged/main/default/objects/College_Application__c/fields/string_collaborators__c.field-meta.xml
<CustomField>
    <fullName>string_collaborators__c</fullName>
    <formula>University__r.string_collaborators__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>string_collaborators</label>
    <type>Text</type>
</CustomField>