unpackaged/main/default/objects/College_Application__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>College Applications (Student Account)</relationshipLabel>
    <relationshipName>College_Application_Student</relationshipName>
    <type>Lookup</type>
</CustomField>