unpackaged/main/default/objects/College_Application__c/fields/Student_Action_Needed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Student_Action_Needed_Reason__c</fullName>
    <label>Student Action Needed Reason</label>
    <type>TextArea</type>
</CustomField>