unpackaged/main/default/objects/College_Application__c/fields/Student_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Student_Date_of_Birth__c</fullName>
    <label>Student Date of Birth</label>
    <type>Date</type>
</CustomField>