unpackaged/main/default/objects/College_Application__c/fields/Student_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Student_Graduation_Year__c</fullName>
    <label>Student Graduation Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>