unpackaged/main/default/objects/College_Application__c/fields/Student_Plans_to_Use_Fafsa__c.field-meta.xml
<CustomField>
    <fullName>Student_Plans_to_Use_Fafsa__c</fullName>
    <label>Student Plans to Use Fafsa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>