unpackaged/main/default/objects/College_Application__c/fields/Student_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Student_Zip_Code__c</fullName>
    <label>Student Zip Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>