unpackaged/main/default/objects/College_Application__c/fields/Students_Address__c.field-meta.xml
<CustomField>
    <fullName>Students_Address__c</fullName>
    <label>Students Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>