unpackaged/main/default/objects/College_Application__c/fields/Students_City__c.field-meta.xml
<CustomField>
    <fullName>Students_City__c</fullName>
    <label>Students City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>