unpackaged/main/default/objects/College_Application__c/fields/Students_High_School__c.field-meta.xml
<CustomField>
    <fullName>Students_High_School__c</fullName>
    <label>Students High School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>