unpackaged/main/default/objects/College_Application__c/fields/Students_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Students_Last_Name__c</fullName>
    <label>Students Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>