unpackaged/main/default/objects/College_Application__c/fields/Students_State__c.field-meta.xml
<CustomField>
    <fullName>Students_State__c</fullName>
    <label>Students State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>