unpackaged/main/default/objects/College_Application__c/fields/Submit_To_University__c.field-meta.xml
<CustomField>
    <fullName>Submit_To_University__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit To University</label>
    <type>Checkbox</type>
</CustomField>