unpackaged/main/default/objects/College_Application__c/fields/Submitted_To_University_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_To_University_Date_Time__c</fullName>
    <label>Submitted To University Date/Time</label>
    <type>DateTime</type>
</CustomField>