unpackaged/main/default/objects/College_Application__c/fields/University_App_Id__c.field-meta.xml
<CustomField>
    <fullName>University_App_Id__c</fullName>
    <formula>University__r.Application_Template_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>University App Id</label>
    <type>Text</type>
</CustomField>