unpackaged/main/default/objects/College_Application__c/fields/University_Decision__c.field-meta.xml
<CustomField>
    <fullName>University_Decision__c</fullName>
    <label>University Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>