unpackaged/main/default/objects/College_Application__c/fields/University_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>University_Decision_Date__c</fullName>
    <label>University Decision Date</label>
    <type>Date</type>
</CustomField>