unpackaged/main/default/objects/College_Application__c/fields/University_Lookup__c.field-meta.xml
<CustomField>
    <fullName>University_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>University Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>University</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>College Applications (University Lookup)</relationshipLabel>
    <relationshipName>College_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>