unpackaged/main/default/objects/College_Application__c/fields/Verto_Application_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Verto_Application_Submit_Date__c</fullName>
    <inlineHelpText>This field is locked because a workflow will auto-populate it.</inlineHelpText>
    <label>Verto Application Submit Date</label>
    <type>Date</type>
</CustomField>