unpackaged/main/default/objects/College_Application__c/fields/Verto_Semester__c.field-meta.xml
<CustomField>
    <fullName>Verto_Semester__c</fullName>
    <label>Verto Semester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fall 2020</fullName>
            </value>
            <value>
                <fullName>Spring 2021</fullName>
            </value>
            <value>
                <fullName>Fall 2021</fullName>
            </value>
            <value>
                <fullName>Spring 2022</fullName>
            </value>
            <value>
                <fullName>Fall 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>