unpackaged/main/default/objects/College_Application__c/fields/Verto_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Verto_Start_Date__c</fullName>
    <label>Verto Start Date</label>
    <type>Date</type>
</CustomField>