unpackaged/main/default/objects/College_Application__c/fields/When_did_you_Start_High_School__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_Start_High_School__c</fullName>
    <label>When did you Start High School?</label>
    <type>Date</type>
</CustomField>