unpackaged/main/default/objects/College_Application__c/fields/When_will_you_complete_High_School__c.field-meta.xml
<CustomField>
    <fullName>When_will_you_complete_High_School__c</fullName>
    <label>When will you complete High School</label>
    <type>Date</type>
</CustomField>