unpackaged/main/default/objects/College_Application__c/fields/Which_IB_Courses__c.field-meta.xml
<CustomField>
    <fullName>Which_IB_Courses__c</fullName>
    <label>Which IB Courses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>