unpackaged/main/default/objects/College_Application__c/fields/Years_Living_in_State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Years_Living_in_State_of_Residence__c</fullName>
    <label>Years Living in State of Residence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>