unpackaged/main/default/objects/College_Application__c/validationRules/Can_t_Edit_After_Sent_to_University.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_t_Edit_After_Sent_to_University</fullName>
    <active>false</active>
    <errorConditionFormula>AND
($User.Bypass_Validation__c  = False, 
Submit_To_University__c = TRUE, 
OR(
ISCHANGED(ACT_English_Score__c),
ISCHANGED(ACT_Math_Score__c),
ISCHANGED(ACT_Science_Score__c),
ISCHANGED(ACT_Score__c),
ISCHANGED(ACT_Scores__c),
ISCHANGED(Additional_Gender_Info__c),
ISCHANGED(Application_Status__c),
ISCHANGED(Are_you_an_International_Student__c),
ISCHANGED(Biological_Sex__c),
ISCHANGED(Citizenship__c),
ISCHANGED(Common_Application__c),
ISCHANGED(Completed_2_years_of_Social_Studies__c),
ISCHANGED(Completed_2_years_of_World_Language__c),
ISCHANGED(Completed_3_years_of_Science__c),
ISCHANGED(Completed_4_years_of_English__c),
ISCHANGED(Completed_4_years_of_Math_thru_Algebra__c),
ISCHANGED(Counselor_Letter_of_Recommendation__c),
ISCHANGED(County_of_Residence__c),
ISCHANGED(Criminal_Convictions__c),
ISCHANGED(CSS__c),
ISCHANGED(Date_Taken_ACT__c),
ISCHANGED(Disciplinary_Violation__c),
ISCHANGED(Dual_Citizenship__c),
ISCHANGED(Dual_Enrollment_Institution__c),
ISCHANGED(Enrolled_in_IB_Courses_in_HS__c),
ISCHANGED(Enrollment_Record__c),
ISCHANGED(Essay__c),
ISCHANGED(FAFSA__c),
ISCHANGED(First_generation__c),
ISCHANGED(GPA_Flag__c),
ISCHANGED(GPA_Scale__c),
ISCHANGED(GPA_Weighting__c),
ISCHANGED(Have_you_ever_enrolled_in_AP_Courses_in__c),
ISCHANGED(Have_you_ever_enrolled_in_Dual_Enrollmen__c),
ISCHANGED(Have_you_ever_enrolled_in_Early_Middle_C__c),
ISCHANGED(Have_you_previously_attended_college_or__c),
ISCHANGED(Have_you_taken_the_ACT__c),
ISCHANGED(Have_you_taken_the_SAT__c),
ISCHANGED(High_School_CEEB_Code__c),
ISCHANGED(High_School_GPA__c),
ISCHANGED(Hispanic_or_Latino_a_x__c),
ISCHANGED(Hobbies__c),
ISCHANGED(Identity__c),
ISCHANGED(Major_of_Interest_1__c),
ISCHANGED(Major_of_Interest_2__c),
ISCHANGED(Number_of_Verto_Semesters__c),
ISCHANGED(Official_Transcript__c),
ISCHANGED(On_Hold_Follow_Up_Date__c),
ISCHANGED(On_Hold_Reason__c),
ISCHANGED(Opportunity__c),
ISCHANGED(Other_Letter_of_Recommendation__c),
ISCHANGED(Parents_Highest_Degree_Earned__c),
ISCHANGED(Parents_Marital_Status__c),
ISCHANGED(Parents_State_of_Legal_Residence__c),
ISCHANGED(Partner_Essay__c),
ISCHANGED(Partner_University_Application__c),
ISCHANGED(Passport__c),
ISCHANGED(Permanent_Home__c),
ISCHANGED(Please_provide_the_course_s_and_grade_s__c),
ISCHANGED(Proficient_Spoken_Languages__c),
ISCHANGED(Residency_Status__c),
ISCHANGED(SAT_Math_Score__c),
ISCHANGED(SAT_Reading_Writing__c),
ISCHANGED(SAT_Date__c),
ISCHANGED(SAT_Score__c),
ISCHANGED(SAT_Scores__c),
ISCHANGED(School_Application__c),
ISCHANGED(Semester_Date_Applying_to_Partner_Univer__c),
ISCHANGED(Senior_Schedule__c),
ISCHANGED(Special_Circumstances_that_impact_high_s__c),
ISCHANGED(State_of_Legal_Residence__c),
ISCHANGED(Statement_of_Interest__c),
ISCHANGED(Student_Account__c),
ISCHANGED(Student_Action_Needed_Reason__c),
ISCHANGED(Student_Date_of_Birth__c),
ISCHANGED(Student_Email__c),
ISCHANGED(Student_Graduation_Year__c),
ISCHANGED(Student_Phone_Number__c),
ISCHANGED(Student_Plans_to_Use_Fafsa__c),
ISCHANGED(Student_Zip_Code__c),
ISCHANGED(Students_Address__c),
ISCHANGED(Students_City__c),
ISCHANGED(Students_First_Name__c),
ISCHANGED(Students_High_School__c),
ISCHANGED(Students_Last_Name__c),
ISCHANGED(Students_State__c),
ISCHANGED(Submit_To_University__c),
ISCHANGED(Teacher_Letter_of_Recommendation__c),
ISCHANGED(Transcript__c),
ISCHANGED(University__c),
ISCHANGED(University_App_Id__c),
ISCHANGED(Unofficial_Transcript__c),
ISCHANGED(Verto_Application_Submit_Date__c),
ISCHANGED(Verto_Start_Date__c),
ISCHANGED(Visa_Status__c),
ISCHANGED(When_did_you_Start_High_School__c),
ISCHANGED(When_will_you_complete_High_School__c),
ISCHANGED(Which_AP_Courses__c),
ISCHANGED(Which_IB_Courses__c),
ISCHANGED(Years_Living_in_State_of_Residence__c)))</errorConditionFormula>
    <errorMessage>This Application Has Already Been Submitted to the University. You cannot edit it.</errorMessage>
</ValidationRule>