unpackaged/main/default/objects/College_Application__c/validationRules/OnHoldReasonNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>OnHoldReasonNeeded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $User.Bypass_Validation__c = False, 
ISPICKVAL( Application_Status__c , &quot;On Hold&quot;), 
OR(
ISPICKVAL( On_Hold_Reason__c, &quot;&quot;), 
ISBLANK( On_Hold_Follow_Up_Date__c )))</errorConditionFormula>
    <errorDisplayField>On_Hold_Reason__c</errorDisplayField>
    <errorMessage>Please select an On Hold Reason and enter and On Hold Follow Up Date</errorMessage>
</ValidationRule>