unpackaged/main/default/objects/College_Application__c/validationRules/University_Decision_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>University_Decision_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $User.Bypass_Validation__c = False, 
ISBLANK(University_Decision_Date__c),

OR(
ISPICKVAL( University_Decision__c , &quot;Accept&quot;), 
ISPICKVAL( University_Decision__c , &quot;Reject&quot;)))</errorConditionFormula>
    <errorDisplayField>University_Decision_Date__c</errorDisplayField>
    <errorMessage>Please Enter the Date that the University sent us their decision</errorMessage>
</ValidationRule>