unpackaged/main/default/objects/College_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Verto_Semester__c</columns>
    <columns>Semester_Applying_to_Partner__c</columns>
    <columns>University_Decision__c</columns>
    <columns>Final_Student_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>College_Application_Owner__c</field>
        <operation>equals</operation>
        <value>Krista Goebel</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>