unpackaged/main/default/objects/College_Application__c/listViews/All_Partner_Applications.listView-meta.xml
<ListView>
    <fullName>All_Partner_Applications</fullName>
    <columns>NAME</columns>
    <columns>Verto_Semester__c</columns>
    <columns>Semester_Applying_to_Partner__c</columns>
    <columns>University_Decision__c</columns>
    <columns>Final_Student_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Partner Applications</label>
</ListView>