unpackaged/main/default/objects/College_Application__c/listViews/X00_My_New_College_Applications.listView-meta.xml
<ListView>
    <fullName>X00_My_New_College_Applications</fullName>
    <columns>NAME</columns>
    <columns>Student_Account__c</columns>
    <columns>University__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>00 - My New College Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>