unpackaged/main/default/objects/College_Application__c/listViews/X01_My_In_Progress_College_Applications.listView-meta.xml
<ListView>
    <fullName>X01_My_In_Progress_College_Applications</fullName>
    <columns>NAME</columns>
    <columns>Student_Account__c</columns>
    <columns>University__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>01 - My Pending Rev College Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>